   Creative Commons, 559 Nathan Abbott Way, Stanford, California 94305,
   USA.  A summary of the license and the full legal text is included
   in file: COPYING.  If you wish to distribute some or all of this work
   under different terms, please contact respective author(s).
   The license applies to all entries newer than 2009-04-28.
*/

2012-11-19 12:27 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbide/hbide_v.ch
    ! Version bump.

  * hbide/saveload.prg
    ! Fixed: a nstry regression where QFontDialog() constructed with
        a parent was always returning parents font, no matter what 
        method you adopted. 

2012-11-16 22:09 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbide/hbide_v.ch
    ! Version bump.

  * hbide/docwriter.prg
    + Added: "Run time error" $TEMPLATE$ used in doc/en/subcodes.txt.

  ; Now all documentation files in doc/en/*.txt are loaded and saved 
    without any difference, except for where COMPLIANCE PLATFORMS FILES 
    order is changed. Content remain the same only order chages.

2012-11-16 19:54 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
  * hbide/hbide_v.ch
    ! Version bump.

  * hbide/docwriter.ui
    % Changed: Various QLineEdit()s with QPLainTextEdit()s to accomodate 
        multi-line help sections.

  * hbide/docwriter.prg
  * hbide/harbourhelp.prg
  * hbide/misc.prg
    ! Changed: to accomodate multi-line entries.
    + Added: comboBox on Documentation Writer's toolbar containing all the 
        function names within opened file. This facilitates to switch to 
        any function from within single load. Note that each function, 
        if modified, has to be saved before loading another.
    + Implemented: logic to retain the blank sections also if present 
        in the function body. This facilitates to have exact same content,
        except for the modified one, in the saved file.

  ; TOBE VERIFIED: 
    1. some harbour/doc/en/.txt files have different order 