@@ -16,6 +16,14 @@
    The license applies to all entries newer than 2009-04-28.
 */
 
+2012-11-26 11:43 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
+  * hbide/docwriter.ui
+  * hbide/docwriter.prg
+  * hbide/harbourhelp.prg
+  * hbide/misc.prg
+    - Removed: $TESTS$ token from Ide Documentation Writer as per Harbour
+       specifications. This token is removed all-over.
+
 2012-11-19 12:27 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)
   * hbide/hbide_v.ch
     ! Version bump.
